RandomFood api integration and abstract class for api integration

--- a/src/app/component/side-tool-bar/side-tool-bar.component.html
+++ b/src/app/component/side-tool-bar/side-tool-bar.component.html
@@ -10,6 +10,9 @@
       <li>
         <a routerLink="/memes">Trending Memes</a>
       </li>
+      <li>
+        <a routerLink="/foodDishesPictures">Random food Dishes</a>
+      </li>
     </nav>
     </ul>
   </div>
