--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,9 +5,31 @@
 
 // @import './assets/css/bootstrap.css';
 
+
 body {
     padding-top: 50px;
+    background-image: url('./assets/images/myBackgroundImag.png');
 }
+
+
+.gradient-custom {
+    /* fallback for old browsers */
+    background: #a18cd1;
+
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(45deg,
+        rgba(29, 236, 197, 0.6),
+        rgba(91, 14, 214, 0.6) 100%);
+
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(45deg,
+        rgba(29, 236, 197, 0.6),
+        rgba(91, 14, 214, 0.6) 100%);
+
+    height: calc(100%);  
+    min-height: 100vh;
+  }
+
 
 .placeholders {
     margin-bottom: 30px;
