--- a/src/app/component/random-food-dishes-page/random-food-dishes-page.component.scss
+++ b/src/app/component/random-food-dishes-page/random-food-dishes-page.component.scss
@@ -1,5 +1,4 @@
 .parent {
-    width: 70%;
     padding: 15 px;
     border: solid 2px rgb(89, 88, 90);
   }
@@ -7,11 +6,33 @@
   img {
     display: block;
     width: 100%;
-    height: 70 px;
+    height: 400px;
   }
 
 .buttonBottom{
     position:relative;
-    padding: 15 px;
+    // padding: 15 px;
     bottom: 0%;
+    margin-right:16px
 }
+
+.button{
+  padding: 10%;
+  margin: 40px 2px;
+}
+
+.panel-custom{
+  height: 300px;
+  padding-top: 10%;
+  padding-bottom: 25%;
+}
+
+.custom-input-dishName{
+  width: 50%;
+}
+
+.food-custom-row{
+  padding-top: 10%;
+  size: 50%;
+}
+
