--- a/src/app/component/right-side-toolbar/right-side-toolbar.component.scss
+++ b/src/app/component/right-side-toolbar/right-side-toolbar.component.scss
@@ -8,7 +8,5 @@
     padding: 20px;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background-color: #f5f5f5;
-    border-right: 1px solid #eee;
-    width: 180px;
+    border-left: 1px solid rgb(44, 10, 82);
 }
