--- a/src/app/component/side-tool-bar/side-tool-bar.component.scss
+++ b/src/app/component/side-tool-bar/side-tool-bar.component.scss
@@ -1,6 +1,5 @@
 .sidebar {
     display: none;
-    background-color: #5f42ca;
 }
 @media (min-width: 768px) {
     .sidebar {
@@ -13,9 +12,7 @@
         padding: 20px;
         overflow-x: hidden;
         overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-        background-color: #f5f5f5;
-        border-right: 1px solid #eee;
-        width: 180px;
+        border-right: 1px solid rgb(44, 10, 82);
     }
 }
 
