added alert for search dish button

--- a/src/app/component/random-food-dishes-page/random-food-dishes-page.component.html
+++ b/src/app/component/random-food-dishes-page/random-food-dishes-page.component.html
@@ -6,7 +6,7 @@
                 <input id="dishName" type="text" class="form-control" [(ngModel)]="dishName" />
             </div>
             <div class="row food-custom-row">
-                <button class="buttonBottom" (click)="getRandomFoodPosts()">Random Food Dish</button>
+                <button class="buttonBottom" (click)="getRandomFoodPosts()">Show Random Dish</button>
                 <button class="buttonBottom" (click)="getSearchTextFoodPosts()">Search Dish</button>
             </div>
         </div>
