Enabling fodd search feature

--- a/src/app/component/random-food-dishes-page/random-food-dishes-page.component.html
+++ b/src/app/component/random-food-dishes-page/random-food-dishes-page.component.html
@@ -9,6 +9,19 @@
                 <button class="buttonBottom" (click)="getRandomFoodPosts()">Show Random Dish</button>
                 <button class="buttonBottom" (click)="getSearchTextFoodPosts()">Search Dish</button>
             </div>
+            <div>
+                <p>
+                    Available Food: [ biryani
+                    burger
+                    butter-chicken
+                    dessert
+                    dosa
+                    idly
+                    pasta
+                    pizza
+                    rice
+                    samosa ]</p>
+            </div>
         </div>
 
         <div class="col-md-6">
