changed on landing page 2

--- a/src/app/component/landing-page/landing-page.component.html
+++ b/src/app/component/landing-page/landing-page.component.html
@@ -1,4 +1,17 @@
-<div class="images">
-    <img  class="images" src="../../../assets/images/internet-marketing-collage-with-icons-clip-art-vector_csp23411366.png"/>
+<div class="container">
+  <div class="row"> 
+    <div class= "panel-custom col-md-10">
+      <div class="text-custom">
+        <div>
+          <h3>An Inspirational quote</h3>
+        </div>
+        <p> {{quote}}</p>
+      </div>
+      <a href="">
+        <button class="buttonBottom">Refresh</button>
+      </a> 
+    </div>
   </div>
-  
+</div>
+
+ 
