--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,22 @@
 
    <app-top-tool-bar></app-top-tool-bar>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm-2">
+      <div class="container-fluid">
+      <!-- <div class="row"> -->
+        <!-- <div class="col-sm-2">
           <app-side-tool-bar></app-side-tool-bar>
-        </div>
-        <div class="col-sm-8 main">
+        </div> -->
+        
           <div class="row">
             <!-- <div>
               Please select the topic for getting feed
             </div> -->
-            <div class="col">
+            <div class="col-sm-12 main">
               <app-main-view-centre></app-main-view-centre>
             </div>
-          </div>
+          
         </div>
-        <div class="col-sm-2">
-          <app-right-side-toolbar></app-right-side-toolbar>
-        </div>
-      </div>
+        <!-- <div class="col-sm-2">
+         <app-right-side-toolbar></app-right-side-toolbar>
+        </div> -->
+      <!-- </div> -->
     </div>
-
-  
