--- a/src/app/component/side-tool-bar/side-tool-bar.component.scss
+++ b/src/app/component/side-tool-bar/side-tool-bar.component.scss
@@ -3,7 +3,7 @@
 }
 @media (min-width: 768px) {
     .sidebar {
-        position: fixed;
+        position: relative;
         top: 51px;
         bottom: 0;
         left: 0;
