--- a/src/app/component/top-tool-bar/top-tool-bar.component.html
+++ b/src/app/component/top-tool-bar/top-tool-bar.component.html
@@ -11,10 +11,11 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a routerLink="/">Dashboard</a></li>
-        <li><a routerLink="/">Settings</a></li>
-        <li><a routerLink="/">Profile</a></li>
-        <li><a routerLink="/">Help</a></li>
+        
+        <li><a data-toggle="collapse" data-target="#navbar"  routerLink="/">Home</a></li>
+        <li><a data-toggle="collapse" data-target="#navbar" routerLink="/memes">Trending Memes</a></li>
+        <!-- <li><a data-toggle="collapse" data-target="#navbar"  routerLink="/">Profile</a></li>
+        <li><a data-toggle="collapse" data-target="#navbar" routerLink="/">Help</a></li> -->
       </ul>
       <form class="navbar-form navbar-right">
         <input type="text" class="form-control" placeholder="Search...">
